--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "MODE=development DB_HOST=localhost DB_USER=root DB_PW=asdf DB_NAME=cms vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
